# metalstat

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
src/metalstat/: __init__.py  __main__.py  cli.py  core.py  cpu.py  gpu.py  ioreport.py  memory.py  power.py  procs.py  runner.py  sysinfo.py  util.py
tests/: test_metalstat.py
