[project]
name = "metalstat"
version = "0.1.3"
description = "Apple Silicon GPU/CPU/Memory monitoring CLI — like gpustat, but for Metal"
readme = "README.md"
authors = [
    { name = "ran", email = "hzz5361@psu.edu" }
]
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["apple-silicon", "gpu", "metal", "monitoring", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "psutil>=5.9.0",
    "rich>=13.0",
    "pyobjc-framework-Metal>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/WindChimeRan/metalstat"
Source = "https://github.com/WindChimeRan/metalstat"
Issues = "https://github.com/WindChimeRan/metalstat/issues"

[project.scripts]
metalstat = "metalstat.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
